--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.2.3
   fluid_bottom_nav_bar: ^1.4.0
   google_fonts: ^6.2.0
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
